Bug 555840 - Implement datalist element. r=sicking,mrbkap,ehsan sr=smaug a2.0=roc